# fuzz_in_ci

./: setup.cfg
fuzzer/: __main__.py  fuzzer.py  used_files.py
test_target/: CMakeLists.txt  exe_a.cpp
